Fix dropdown on ios bug

--- a/public/stylesheets/content.scss
+++ b/public/stylesheets/content.scss
@@ -17,3 +17,9 @@
     color: $primary-text;
   }
 }
+
+@media all and (max-width: 600px) {
+  .app-content {
+    padding: 32px 0 30px 0;
+  }
+}
