--- a/public/stylesheets/header.scss
+++ b/public/stylesheets/header.scss
@@ -27,7 +27,7 @@ header {
 
 a.logo {
   color: $primary-text;
-  position: relative;
+  position: fixed;
   z-index: 4;
   margin: 5px 0;
   font-size: 36px;
@@ -53,6 +53,10 @@ a.logo {
 }
 
 @media all and (max-width: 600px) {
+  header {
+    position: static;
+    border-bottom: 0;
+  }
   .header-container {
     width: 90%;
     margin: 0 auto;
@@ -76,9 +80,9 @@ a.logo {
     top: 0;
     left: 0;
     background-color: $background;
-    box-shadow: 0 4px 4px -3px #232323;
-    -moz-box-shadow: 0 4px 4px -3px #232323;
-    -webkit-box-shadow: 0 4px 4px -3px #232323;
+    box-shadow: 0 4px 4px -3px $secondary;
+    -moz-box-shadow: 0 4px 4px -3px $secondary;
+    -webkit-box-shadow: 0 4px 4px -3px $secondary;
     overflow: hidden;
     transition: all 0.4s ease-in-out;
     padding-top: 0px;
